--- a/android/java/JitsiSDKTest/app/src/main/res/layout/activity_main.xml
+++ b/android/java/JitsiSDKTest/app/src/main/res/layout/activity_main.xml
@@ -55,12 +55,12 @@
 
     <Switch
         android:id="@+id/switchMedia"
-        android:layout_width="83dp"
+        android:layout_width="88dp"
         android:layout_height="38dp"
         android:layout_marginStart="100dp"
         android:layout_marginBottom="33dp"
         android:text="Audio"
-        app:layout_constraintBottom_toTopOf="@+id/conferenceName"
+        app:layout_constraintBottom_toTopOf="@+id/serverURL"
         app:layout_constraintEnd_toStartOf="@+id/textView"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -73,7 +73,7 @@
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/conferenceName"
+        app:layout_constraintBottom_toTopOf="@+id/serverURL"
         app:layout_constraintStart_toEndOf="@+id/switchMedia" />
 
     <EditText
